# CSEntryWeb

./: .gitignore  CMakeLists.txt.bak  CSPro.js  README.md  cspro-api-routes.js  cspro-wasm-service.js  package-lock.json  package.json  server-api.js
cspro-dev/cspro/SQLite/: CMakeLists.txt  Encryption.h
cspro-dev/cspro/WASM/: CMakeLists.txt  WASMBindings.cpp
cspro-dev/cspro/zAppO/: CMakeLists.txt  OccurrenceLabels.h
cspro-dev/cspro/zDataO/: EncryptedSQLiteRepository.cpp
cspro-dev/cspro/zDictO/: DictItem.h  DictLevel.h  DictRecord.h  DictRelation.h  DictValueSet.h
cspro-dev/cspro/zJson/: CMakeLists.txt
cspro-dev/cspro/zSyncO/: SyncServerConnectionFactory.cpp
cspro-dev/cspro/zToolsO/: NullTerminatedString.h
cspro-dev/cspro/zUtilO/: PortableColor.h  imsaStr.h
docs/: CSPro_WASM_Web_Functions_Report.html
storage/applications/DeployPSC/: package.json
storage/applications/DeployPSC/Household/: Household.pen
storage/applications/DeployPSC/Login/: Login.pen
storage/applications/DeployPSC/Menu/: Menu.pen
storage/applications/SimpleCAPI/: Simple CAPI Data.csdb  Simple CAPI.pen  package.json
web/: CSPro.js  action-invoker.js  csentry-mfc-view-modular.js  csentry-mfc-view.js.bak  cspro-api-client.js  cspro-runtime.js  index.html
web/components/csentry-mfc-view/: index.js  styles.js
web/dialogs/: Image-captureSignature.html  Image-takePhoto.html  Image-view.html  Path-selectFile.html  Path-showFileDialog.html  action-invoker-web.js  choice.html  errmsg.html  note-edit.html  note-review.html  select.html  text-input.html
(+34 files in other folders)
